--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "feathers-authentication-local",
-  "description": "Local authentication strategy for feathers-authentication",
+  "name": "@feathersjs/authentication-local",
+  "description": "Local authentication strategy for @feathers/authentication",
   "version": "0.4.4",
-  "homepage": "https://github.com/feathersjs/feathers-authentication-local",
+  "homepage": "https://github.com/feathersjs/authentication-local",
   "main": "lib/",
   "keywords": [
     "feathers",
@@ -11,7 +11,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/feathersjs/feathers-authentication-local.git"
+    "url": "git://github.com/feathersjs/authentication-local.git"
   },
   "author": {
     "name": "Feathers contributors",
@@ -20,7 +20,7 @@
   },
   "contributors": [],
   "bugs": {
-    "url": "https://github.com/feathersjs/feathers-authentication-local/issues"
+    "url": "https://github.com/feathersjs/authentication-local/issues"
   },
   "engines": {
     "node": ">= 6"
